--- a/public/style scratch 2.css
+++ b/public/style scratch 2.css
@@ -82,45 +82,82 @@ body {
     height: 600px;
 }
 
-.timeline {
-    color: #000000;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    font-size: 10px;
-    font-weight: bold;
-    height: auto;
-    max-width: 1200px;
-    margin: 100px auto;
-    position: relative;
+/* ------------------------------------timeline---------------------------- */
+
+.timeline * {
+    margin: 0;
+    padding: 0;
+    font-family: Poppins;
+    box-sizing: border-box;
+    z-index: 1;
 }
 
-.timeline-container {
+.timeline {
+    /* container for timeline */
+    background: #2e364a;
+}
+
+.timeline-frame {
+    position: relative;
+    max-width: 1200px;
+    margin: 100px auto;
+}
+.container {
     padding: 10px 50px;
     position: relative;
     width: 50%;
-    background: rgba(0, 0, 0, 0.3);
-    border: solid blue;
+    /* background: rgba(0, 0, 0, 0.3); */
+
+    animation: movedown 1s linear forwards;
+    opacity: 0;
+}
+
+@keyframes movedown {
+    0% {
+        opacity: 1;
+        transform: translateY(-30px);
+    }
+    100% {
+        opacity: 1;
+        transform: translateY(0px);
+    }
+}
+
+/* .container:nth-child(1) {
+    animation-delay: 0s;
+} */
+.container:nth-child(2) {
+    animation-delay: 1s;
+}
+.container:nth-child(3) {
+    animation-delay: 2s;
+}
+.container:nth-child(4) {
+    animation-delay: 3s;
+}
+.container:nth-child(5) {
+    animation-delay: 4s;
+}
+.container:nth-child(6) {
+    animation-delay: 5s;
 }
 
 .text-box {
     padding: 20px 30px;
-    background: #ffffff;
+    background: #fff;
     position: relative;
     border-radius: 6px;
     font-size: 15px;
-    border: solid red;
 }
 
 .left-container {
     left: 0;
 }
-
 .right-container {
     left: 50%;
 }
 
-.timeline-container img {
+.container img {
     position: absolute;
     width: 40px;
     border-radius: 50%;
@@ -133,17 +170,99 @@ body {
     left: -20px;
 }
 
-.timeline::after {
+.timeline-frame::after {
     content: "";
     position: absolute;
     width: 6px;
     height: 100%;
-    background: #ffffff;
+    background: #fff;
     top: 0;
     left: 50%;
     margin-left: -3px;
     z-index: -1;
+    animation: moveline 6s linear forwards;
 }
+
+@keyframes moveline {
+    0% {
+        height: 0;
+    }
+    100% {
+        height: 100%;
+    }
+}
+
+.text-box h2 {
+    font-weight: 600;
+}
+
+.text-box small {
+    display: inline-block;
+    margin-bottom: 15px;
+}
+
+.left-container-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 28px;
+    z-index: 2;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-left: 15px solid #fff;
+    right: -15px;
+}
+
+.right-container-arrow {
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 28px;
+    z-index: 2;
+    border-top: 15px solid transparent;
+    border-bottom: 15px solid transparent;
+    border-right: 15px solid #fff;
+    left: -15px;
+}
+
+@media screen and (max-width: 600px) {
+    .timeline-frame {
+        margin: 50px auto;
+    }
+    .timeline-frame::after {
+        left: 31px;
+    }
+    .container {
+        width: 100%;
+        padding-left: 80px;
+        padding-right: 25px;
+    }
+    .text-box {
+        font-size: 13px;
+    }
+    .text-box small {
+        margin-bottom: 10px;
+    }
+    .right-container {
+        left: 0;
+    }
+    .left-container img,
+    .right-container img {
+        left: 10px;
+    }
+
+    .left-container-arrow,
+    .right-container-arrow {
+        border-right: 15px solid #fff;
+        border-left: 0;
+        left: -15px;
+    }
+}
+
+/*--------------------*/
+
+/*----------merch------------*/
+
 .merch {
     color: #ffee00;
     text-align: center;
@@ -153,92 +272,80 @@ body {
     font-weight: bold;
     height: 600px;
 }
+/*--------------------*/
 
-.book_section {
-    position: relative;
+/*------------- faq -----------------*/
+
+.faq {
+    display: flex;
+}
+.faq-form-container {
+    width: 50%;
+    display: inline-flex;
+}
+.faq-form {
     width: 100%;
-    left: 30px;
-    right: 30px;
-    height: auto;
+    display: flex;
+    justify-content: center;
 }
 
-.book_section .heading_container {
-    margin-bottom: 25px;
-    color: #ffffff;
-    width: 45%;
+.faq-form-div {
+    width: 80%;
 }
 
-.book_section .form_container .form-control {
-    width: 45%;
-    border: none;
-    height: 50px;
+.location-container {
+    width: 50%;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.location-frame {
+    margin-top: 10px;
+    border-radius: 10px;
+    height: 368px;
+    width: 80%;
+}
+
+.faq-input {
+    color: white;
+    background-color: black;
+    border: solid white 1px;
+    border-radius: 6px;
+    width: 95%;
+    height: 40px;
     margin-bottom: 25px;
-    padding-left: 25px;
-    border: 1px solid #999;
+    padding: 6px 20px;
+}
+
+.faq-input::placeholder {
+    color: white;
+}
+
+.faq-input:focus {
     outline: none;
-    color: #ffffff;
-    background-color: #000000;
-    border-radius: 5px;
-    outline: gray;
-    -webkit-box-shadow: none;
-    box-shadow: none;
 }
 
-.book_section .form_container .form-control::-webkit-input-placeholder {
-    color: #fffefe;
-}
-
-.book_section .form_container .form-control:-ms-input-placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .form-control::-ms-input-placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .form-control::placeholder {
-    color: #ffffff;
-}
-
-.book_section .form_container .nice-select .current {
-    font-size: 16px;
-}
-
-.book_section .form_container button {
-    margin-top: 15px;
+.faq-btn {
     border: none;
-    text-transform: uppercase;
-    display: inline-block;
-    padding: 10px 55px;
     background-color: #ffbe33;
-    color: #ffffff;
-    border-radius: 45px;
-    -webkit-transition: all 0.3s;
-    transition: all 0.3s;
-    border: none;
+    color: white;
+    width: 170px;
+    height: 36px;
+    border-radius: 20px;
+    transition: background-color 0.3s;
+}
+
+.faq-btn:hover {
+    background-color: #e69c00;
     cursor: pointer;
 }
 
-.book_section .form_container button:hover {
-    background-color: #e69c00;
+.faq h2 {
+    margin-bottom: 25px;
 }
 
-.book_section .map_container {
-    position: absolute;
-    top: 10%;
-    left: 50%;
-    width: calc(50%-10px); /* Adjust as needed */
-    height: 380px; /* Adjust as needed */
-    border-radius: 10px;
-    overflow: hidden;
-}
-
-.book_section .map_container #googleMap {
-    height: 100%;
-    min-height: 100%;
-    width: 100%;
-}
-
+/* ----------------------------------- */
 .contact {
     padding-top: 30px;
     color: #ffee00;
