--- a/public/css/user-styles-index.css
+++ b/public/css/user-styles-index.css
@@ -79,7 +79,7 @@ body {
 }
 
 .content {
-    height: 600px;
+    height: 1200px;
 }
 
 /* ------------------------------------timeline---------------------------- */
@@ -629,8 +629,46 @@ body {
     border: solid rgb(255, 0, 0);
     text-align: center;
 }
-.partners {
+
+/* ------------------partners------------------- */
+
+.partners * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
+
+.partners {
+    border: solid;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.partners-swiper-container {
+    /* border: 1px solid red; */
+    width: 80%;
+}
+
+.partners-card {
+    background-color: white;
+    height: 200px;
+    border-radius: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: solid 1px;
+}
+
+.partners-card img {
+    max-width: 90%;
+    max-height: 90%;
+    display: block;
+    margin: auto;
+}
+
+/* -------------------------------------- */
+
 .AIESEC {
     color: #ffee00;
     text-align: center;
