--- a/views/index.html
+++ b/views/index.html
@@ -288,7 +288,33 @@
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
-        <div class="partners">partners</div>
+        <div class="partners">
+            <div class="partners-swiper-container swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-1.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-2.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-3.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-4.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-5.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-3.png" alt="" />
+                    </div>
+                    <div class="swiper-slide partners-card">
+                        <img src="../public/img/partner-2.png" alt="" />
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!-- ---------------------------------------------------------------------------------------------------- -->
 
